--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>Partie 2</h3>
         <p class="lead">Afficher ou masquer le paragraphe text au clic des liens existants.</p>
       </div>
-    </div>
+    </div'
     <a id="show" href="#">Afficher</a>
     <a id="hide" href="#">Masquer</a>
     <p id="text">
@@ -24,11 +24,11 @@
   <script>
     // Fonction affichant/masquant le texte
     $(document).ready(function(){
-      $("#show").click(function(){
-        $("#text").show();
+      $('#show').click(function(){
+        $('#text').show();
       });
-      $("#hide").click(function(){
-        $("#text").hide();
+      $('#hide').click(function(){
+        $('#text').hide();
       });
     });
   </script>
